# climate-action-mobility-tools

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config-optional-linting.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.gitlab/: renovate.json
.gitlab/issue_templates/: Default.md
mobility-tools/: detour_factors.py  ors_settings.py
mobility_tools/: detour_factors.py  detour_factors_batched.py  detour_factors_new.py  detour_factors_simplified.py  main.py  ors_settings.py  settings.py
mobility_tools/detour_factors/: __init__.py  detour_factors.py  snapping.py
mobility_tools/slope/: __init__.py  pmtiles_io.py  pmtiles_utils.py  slope.py  utils.py
mobility_tools/utils/: __init__.py  batching.py  coordinate.py  exceptions.py  snapping.py
test/: conftest.py  test_detour_factors.py  test_detour_factors.test_exclude_ferries.approved.txt  test_detour_factors.test_get_detour_factors.approved.txt  test_detour_factors.test_get_detour_factors_approval_test.approved.txt  test_detour_factors.test_get_ors_walking_distances.approved.txt  test_detour_factors.test_ij_spurs_order.approved.txt  test_detour_factors.test_match_ors_distance_to_cells.approved.txt  test_detour_factors.test_match_ors_distance_to_cells_edge_cases.approved.txt  test_detour_factors.test_ors_request.approved.txt  test_detour_factors_batched.py  test_get_detour_factors  test_get_detour_factors_approval_test  test_get_detour_factors_batched  test_get_ors_walking_distances  test_get_ors_walking_distances_breaking_route  test_ors_request  test_ors_request_route_not_found  test_ors_request_route_not_found_end_of_line  test_ors_request_route_not_found_middle_of_line_multiple  test_ors_request_route_not_found_start_of_line  test_settings.py  test_snapping_request_fail_bad_gateway  test_snapping_request_fail_forbidden
test/resources/: 6-50-33.pmtiles  ors_directions_responses.json  way565149324.geojson
test/test_detour_factors/: test_batching.py  test_detour_factors.py  test_detour_factors.test_exclude_ferries.approved.txt  test_snap_destinations  test_snapping.py
test/test_slope/: test_pmtiles_io.py  test_pmtiles_utils.py  test_slope.py  test_utils.py
test/test_utils/: test_batching.py  test_snapping.py
