[project]
name = "mobility-tools"
version = "0.1.0"
description = "A library to bundle shared code between hiWalk and hiBike plugins"
authors = [
    {name = "Emily C. Wilke",email = "emily.wilke@heigit.org>, Satvik Parashar <satvik.parashar@heigit.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
