[project]
name = "mobility-tools"
version = "0.1.0"
description = "A library to bundle shared code between hiWalk and hiBike plugins"
authors = [
    {name = "Emily C. Wilke", email = "emily.wilke@heigit.org"},
    {name = "Satvik Parashar", email = "satvik.parashar@heigit.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shapely (>=2.1.1,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "openrouteservice (>=2.3.3,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "h3pandas (>=0.3.0,<0.4.0)",
    "numpy (>=2.3.3,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
